<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom"
    android:background="@color/theme_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="46sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="@string/info"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            android:foregroundGravity="center"
            android:background="@color/white"
            ads:adUnitId="@string/google_ad_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/log_in"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>
